rpc and lcd changed

--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
     "public":{
         "chainName": "Dashboard",
-        "chainId": "chain-BYIp0m",
+        "chainId": "colors-test-01",
         "gtm": "{Add your Google Tag Manager ID here}",
         "slashingWindow": 10000,
         "uptimeWindow": 250,
@@ -16,10 +16,10 @@
         "stakingFraction": 1000000,
         "coingeckoId": "cosmos"
     },
-    "genesisFile": "http://ec2-18-221-33-218.us-east-2.compute.amazonaws.com:26657/genesis",
+    "genesisFile": "https://rpc.testnet.color-platform.rnssol.com/genesis",
     "remote":{
-        "rpc":"http://ec2-18-221-33-218.us-east-2.compute.amazonaws.com:26657",
-        "lcd":"http://ec2-18-221-33-218.us-east-2.compute.amazonaws.com:1317"
+        "rpc":"https://rpc.testnet.color-platform.rnssol.com",
+        "lcd":"https://lcd.testnet.color-platform.rnssol.com"
     },
     "debug": {
         "startTimer": true,
